// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageLinkedArticles /> should renders correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <BrowserRouter>
    <Connect(IntlProvider)>
      <Provider>
        <CapUIProvider>
          <DebateStepPageLinkedArticles
            isMobile={false}
            step={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "debate": Object {
                  "articles": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "coverUrl": "omar-au-jaccuzi.jpec",
                          "id": "article1",
                          "origin": "Poitou Charentes",
                          "publishedAt": "2020-20-04:04:05:32",
                          "title": "Omar, oui ou non ?",
                          "url": "lemonde.fr/pour-ou-contre-omar",
                        },
                      },
                      Object {
                        "node": Object {
                          "coverUrl": "omar-au-ski.jpec",
                          "id": "article2",
                          "origin": "Meurthe et Mozelle",
                          "publishedAt": "2020-13-05:02:17:30",
                          "title": "Omar, tout le monde en parle",
                          "url": "lexpress.fr/omar-un-sujet-polarisant",
                        },
                      },
                      Object {
                        "node": Object {
                          "coverUrl": null,
                          "id": "article4",
                          "origin": null,
                          "publishedAt": null,
                          "title": "Omar ma tuer",
                          "url": "lefigaro.fr/omar-ma-tuer",
                        },
                      },
                      Object {
                        "node": Object {
                          "coverUrl": "omar-a-la-plage.jpec",
                          "id": "article5",
                          "origin": null,
                          "publishedAt": "2010-10-10:01:01:21",
                          "title": "Omar, yen a marre",
                          "url": "lecanarddechainé.fr/omar-le-bg",
                        },
                      },
                    ],
                  },
                  "url": "/debate",
                },
                "id": "stepId",
              }
            }
          />
        </CapUIProvider>
      </Provider>
    </Connect(IntlProvider)>
  </BrowserRouter>
</Provider>
`;

exports[`<DebateStepPageLinkedArticles /> should renders correctly on mobile 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <BrowserRouter>
    <Connect(IntlProvider)>
      <Provider>
        <CapUIProvider>
          <DebateStepPageLinkedArticles
            isMobile={true}
            step={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "debate": Object {
                  "articles": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "coverUrl": "omar-au-jaccuzi.jpec",
                          "id": "article1",
                          "origin": "Poitou Charentes",
                          "publishedAt": "2020-20-04:04:05:32",
                          "title": "Omar, oui ou non ?",
                          "url": "lemonde.fr/pour-ou-contre-omar",
                        },
                      },
                      Object {
                        "node": Object {
                          "coverUrl": "omar-au-ski.jpec",
                          "id": "article2",
                          "origin": "Meurthe et Mozelle",
                          "publishedAt": "2020-13-05:02:17:30",
                          "title": "Omar, tout le monde en parle",
                          "url": "lexpress.fr/omar-un-sujet-polarisant",
                        },
                      },
                      Object {
                        "node": Object {
                          "coverUrl": null,
                          "id": "article4",
                          "origin": null,
                          "publishedAt": null,
                          "title": "Omar ma tuer",
                          "url": "lefigaro.fr/omar-ma-tuer",
                        },
                      },
                      Object {
                        "node": Object {
                          "coverUrl": "omar-a-la-plage.jpec",
                          "id": "article5",
                          "origin": null,
                          "publishedAt": "2010-10-10:01:01:21",
                          "title": "Omar, yen a marre",
                          "url": "lecanarddechainé.fr/omar-le-bg",
                        },
                      },
                    ],
                  },
                  "url": "/debate",
                },
                "id": "stepId",
              }
            }
          />
        </CapUIProvider>
      </Provider>
    </Connect(IntlProvider)>
  </BrowserRouter>
</Provider>
`;
